Prevent mailing list button from wrapping onto new line

--- a/shared/components/MailingList/index.scss
+++ b/shared/components/MailingList/index.scss
@@ -56,7 +56,7 @@
       padding: 0px 15px;
 
       max-width: 500px;
-      width: calc(100% - 140px); // 109px button width + 15px margin + 18px + 18px paddings removed.
+      width: calc(100% - 150px);
     }
 
     &__submit {
